samples/_failures_safe/1761642534_7933c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7f43c6f.c: In function ‘main’:
./samples/SAFE/__tmp_e7f43c6f.c:154:11: error: expected ‘;’ at end of input
  154 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_e7f43c6f.c:154:5: error: expected declaration or statement at end of input
  154 |     printf
      |     ^~~~~~
